--- a/myblogpost/templates/login.html
+++ b/myblogpost/templates/login.html
@@ -41,15 +41,15 @@
             </fieldset>
             <div class="form-group pt-3">
                 {{ form.submit(class="btn btn-outline-info") }}
+                <small class="text-muted ml-2">
+                    <a href="{{url_for('users.reset_request')}}" class="ml-2">Forgot Password?</a>
+                </small>
             </div>
-            <small class="text-muted ml-2">
-                <a href="#" class="ml-2">Forgot Password?</a>
-            </small>
         </form>
     </div>
     <div class="border-top">
         <small class="text-muted">
-            Need An Account? <a href="{{ url_for('register') }}" class="ml-2">Sign Up Now.</a>
+            Need An Account? <a href="{{ url_for('users.register') }}" class="ml-2">Sign Up Now.</a>
         </small>
     </div>
 {% endblock content %}
